; ModuleID = '/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_addchars.c'
source_filename = "/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_addchars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strbuf_addchars(%struct.strbuf* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %8 = load i64, i64* %6, align 8
  %9 = call i32 @strbuf_grow(%struct.strbuf* %7, i64 %8)
  %10 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %11 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %14 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %12, %15
  %17 = load i32, i32* %5, align 4
  %18 = load i64, i64* %6, align 8
  %19 = call i32 @memset(i64 %16, i32 %17, i64 %18)
  %20 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %21 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %22 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* %6, align 8
  %25 = add i64 %23, %24
  %26 = call i32 @strbuf_setlen(%struct.strbuf* %20, i64 %25)
  ret void
}

declare dso_local i32 @strbuf_grow(%struct.strbuf*, i64) #1

declare dso_local i32 @memset(i64, i32, i64) #1

declare dso_local i32 @strbuf_setlen(%struct.strbuf*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
